# cvmpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CV.md  GITHUB_SETUP.md  Makefile  README.md
.github/workflows/: ci.yml
docs/: README.md
docs/guides/: 01-Project-Build-Guide.md  02-Architecture-Workflow-Guide.md
docs/pandoc/: defaults.yaml  header.tex  title-01.tex  title-02.tex
docs/typst/: 01-project-build.typ  02-architecture-workflow.typ  cvm-figures-arch.typ  cvm-figures.typ  cvm-theme.typ
examples/: arithmetic.cvm  assignment.cvm  booleans.cvm  comparisons.cvm  div_by_zero.cvm  factorial.cvm  functions.cvm  hello.cvm  if_else.cvm  input_demo.cvm  multiline_demo.cvm
include/cvm++/: ast.hpp  bytecode.hpp  compile.hpp  compiler.hpp  diagnostic.hpp  lexer.hpp  opcode.hpp  parser.hpp  runtime_options.hpp  source_loc.hpp  token.hpp  ui.hpp  value.hpp  vm.hpp
scripts/: build-docs.sh  verify.sh
src/: ast.cpp  ast_print.cpp  bytecode.cpp  compile.cpp  compiler.cpp  diagnostic.cpp  lexer.cpp  main.cpp  opcode.cpp  parser.cpp  source_loc.cpp  token.cpp  ui.cpp  value.cpp  vm.cpp
